# Runeterra

./: .codacy.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Dockerfile  LICENSE  README.md  codecov.yml  sonar-project.properties
.github/workflows/: audit.yml  build.yml  codeql-analysis.yml  macos.yml  rust.yml  test.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
CMake/: CodeCoverage.cmake  CompileOptions.cmake
Extensions/RuneConsole/: CMakeLists.txt  main.cpp
Includes/Runeterra/: Runeterra.hpp  Test.hpp
Includes/Runeterra/CardSets/: Set1CardsGen.hpp  Set2CardsGen.hpp  Set3CardsGen.hpp  Set4CardsGen.hpp  Set5CardsGen.hpp
Resources/: globals-en_us.json  set1-en_us.json  set2-en_us.json  set3-en_us.json  set4-en_us.json  set5-en_us.json
Scripts/: card_comment_gen.py  data_dragon.py  header_gen.py  utils.py
Sources/Runeterra/: CMakeLists.txt  Test.cpp
Sources/Runeterra/CardSets/: Set1CardsGen.cpp  Set2CardsGen.cpp  Set3CardsGen.cpp  Set4CardsGen.cpp  Set5CardsGen.cpp
Sources/Runeterra/Cards/: Card.cpp  Cards.cpp
Sources/Runeterra/Commons/: Utils.cpp
Sources/Runeterra/Core/: Engine.cpp
Sources/Runeterra/Decks/: Deck.cpp
Sources/Runeterra/Games/: Game.cpp  GameManager.cpp
Sources/Runeterra/Helpers/: CardHelpers.cpp  DeckCodeHelpers.cpp  GameHelpers.cpp
Sources/Runeterra/Loaders/: CardLoader.cpp
Sources/Runeterra/Models/: Player.cpp
Sources/Runeterra/Systems/: Engine.cpp  Game.cpp  GameManager.cpp  GameSystem.cpp
Sources/Runeterra/Tasks/: ITask.cpp
Sources/Runeterra/Tasks/PlayerTasks/: EndRoundTask.cpp
Sources/Runeterra/Utils/: DeckCode.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTests.cpp  main.cpp
examples/: Cargo.toml
src/: lib.rs
(+45 files in other folders)
